styles.css
#headname
{
  text-decoration: none;
  margin-left: 3%;
  font-size: .8cm;
  color:#608a6f
  
  
}

#headside
{
  
  
  margin-left: .1%;
  font-size: .5cm;
  color: black;
  font-weight: 600;
  
  
  
}

#header
{
  
  font-family: 'Montserrat', sans-serif;
  background-color: mintcream;

}


#dir
{
  
  margin-right: 3%;
  float:right
  
}

.dire
{
  text-decoration: none;
  color: black;
  font-size: 0.5cm;
  font-weight: 400;

}

#headerline
{
  margin-top: 1.5%;
  margin-bottom: 7%;
  
}

#footerline
{
  margin-top: 12%;
  margin-bottom: 2.5%;
  
  
}



body{
  background-color: white;
}
html{
  background-color:mintcream;
}

#footer
{
  background-color:mintcream
}







.alignleft 
{
  text-align: left;
  float: left;
  margin-left: 5%;
}



#aligncentert
{
  text-align: left;
  margin-left: 31%;
 
}
#aligncenterb
{
  text-align: left;
  margin-left: 31%;
  
}

.alignright 
{
  text-align: left;
  float: right;
  margin-right: 5%;
 
 
}

.titles
{
  font-weight: 700;
  font-size: .55cm;
  color: #608a6f;
}

.all
{
  font-family: 'Montserrat', sans-serif;

}

.webinfo
{
  font-size: .35cm;

}

.bottom
{
  margin-bottom: 2.5%;

}

#hide
{
  color: mintcream;
}

#imgme
{
  width: 60%;
  height: 60%;
  margin-left: 0%;
  max-width: 100%
  
}





.container {
  display: flex;
  align-items: center;
  justify-content: center
}



.image {
  flex-basis: 40%
}

.text {
  
  font-family: 'Montserrat', sans-serif;
  margin-left: -12%;
}

 

 #landname
 {
  font-size: 2cm;
  color: #608a6f;
  font-weight: 3000;
  margin-top: -2%;
  margin-left: -6%;
  
  
 }

 #landocc
 {
  margin-bottom: 10%;
  margin-top: -5%;
  margin-left: -4%;
  font-weight: 500;
  font-size: .4cm
  
  
  
  
 }
 #button
 {
  margin-left: -7%;
 }

 .aboutme {
  position: relative;
  text-align: center;
  color: white;
  font-family: 'Montserrat', sans-serif;
}

.centered {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

#aboutmetit
{
 font-size: 1.7cm; 
 margin-top: -4%;
}

#aboutmep1
{
  font-weight: 300;
}
#aboutmep2
{
  font-weight: 300;
}

 

 
  
 

